feat: Added string to Config TFG icons
Changed some styling

--- a/lang/en.json
+++ b/lang/en.json
@@ -28,6 +28,9 @@
     "nativePlatformsDesc": "Use Native versions of these platforms. (If not available it will use Wine)",
     "tagFilterGroups": "Tag Filter Groups",
     "tagFilterGroupsDesc": "These groups will filter suggestions and games out of search results",
+    "editTagFilter": "Edit Tag Filter Group",
+    "duplicateTagFilter": "Duplicate Tag Filter Group",
+    "deleteTagFilter": "Delete Tag Filter Group",
     "appPathOverrides": "App Path Overrides",
     "appPathOverridesDesc": "Overrides the application path on the left with the one on the right when launching games.",
     "visualsHeader": "Visuals",
