feat: Play Button supports GameData states

--- a/lang/en.json
+++ b/lang/en.json
@@ -246,6 +246,10 @@
     "searching": "Searching...",
     "library": "Library",
     "defaultLibrary": "Default Library",
+    "installed": "Installed",
+    "notInstalled": "Not Installed",
+    "legacyGame": "Legacy Game",
+    "download": "Download",
     "thumbnail": "Thumbnail",
     "screenshot": "Screenshot",
     "dropImageHere": "Drop an image here to add it",
