--- a/lang/en.json
+++ b/lang/en.json
@@ -23,6 +23,7 @@
     "libraries": "Libraries",
     "randomLibraries": "Random Libraries",
     "randomLibrariesDesc": "Libraries to use for Random Picks on the home page.",
+    "updateSource": "Update Source",
     "platforms": "Platforms",
     "nativePlatforms": "Native Platforms",
     "nativePlatformsDesc": "Use Native versions of these platforms. (If not available it will use Wine)",
@@ -463,7 +464,8 @@
     "deleteAddApp": "Delete this Add App?",
     "deleteTagCategory": "Delete this Tag Category?",
     "deleteTag": "Delete this Tag?",
-    "deleteTagAlias": "Delete this Tag Alias?"
+    "deleteTagAlias": "Delete this Tag Alias?",
+    "deleteSource": "Delete this Source?"
   },
   "libraries": {
     "arcade": "Games",
