--- a/lang/en.json
+++ b/lang/en.json
@@ -361,6 +361,10 @@
     "unusedPlatform": "'Platform' has an unused value. Make sure it's spelled correctly!",
     "nonExistingLibrary": "'Library' is not the name of an existing library! (Default will be used)",
     "nonContentFolders": "Non-Content folders found in Curation folder. Are they supposed to be there?",
+    "noTags": "There are no tags on this curation.",
+    "unenteredTag": "The Tags text field hasn't been submitted.",
+    "noLogo": "There is no logo on this curation.",
+    "noScreenshot": "There is no screenshot on this curation.",
     "ilc_notHttp": "Use HTTP.",
     "ilc_nonExistant": "Point to an existing file in your curation's 'content' folder."
   },
@@ -466,7 +470,9 @@
     "deleteTagCategory": "Delete this Tag Category?",
     "deleteTag": "Delete this Tag?",
     "deleteTagAlias": "Delete this Tag Alias?",
-    "deleteSource": "Delete this Source?"
+    "deleteSource": "Delete this Source?",
+    "uninstallGame": "Uninstall this Game?",
+    "unableToUninstallGameData": "Unable to delete data pack. Is it in use? Try restarting the launcher."
   },
   "libraries": {
     "arcade": "Games",
