feat: Play button dropdown for Zipped

--- a/lang/en.json
+++ b/lang/en.json
@@ -252,6 +252,7 @@
     "searching": "Searching...",
     "library": "Library",
     "defaultLibrary": "Default Library",
+    "uninstallGame": "Uninstall Game",
     "installed": "Installed",
     "notInstalled": "Not Installed",
     "legacyGame": "Legacy Game",
