--- a/lang/en.json
+++ b/lang/en.json
@@ -174,6 +174,8 @@
     "exportTagsDesc": "Creates a file full of tags and tag categories that can be used by 'Import Tags'",
     "importTags": "Import Tags",
     "importTagsDesc": "Imports Tags from an file created by 'Export Tags'",
+    "migrateExtremeGames": "Migrate Extreme Games",
+    "migrateExtremeGamesDesc": "Removes 'Extreme' from any games and assigns the 'LEGACY-Extreme' tag to them",
     "servicesHeader": "Background Services",
     "servicesMissing": "There are no services.",
     "running": "Running",
