lang: Change 'Extreme' references in lang

--- a/lang/en.json
+++ b/lang/en.json
@@ -4,8 +4,8 @@
     "configHeader": "Config",
     "configDesc": "(You must press 'Save & Restart' for some changes to take effect)",
     "preferencesHeader": "Preferences",
-    "extremeGames": "Extreme Games",
-    "extremeGamesDesc": "Show games with sexual, violent or other content unsuitable for children.",
+    "extremeGames": "Extreme Content",
+    "extremeGamesDesc": "Allow tags inside 'Extreme' tag filter groups and corresponding games to be shown.",
     "enableEditing": "Enable Editing",
     "enableEditingDesc": "Enable editing of games and additional applications. Also shows tabs related to editing.",
     "onDemandImages": "On Demand Images",
