--- a/lang/en.json
+++ b/lang/en.json
@@ -317,6 +317,7 @@
     "noCurationSelected": "No Curation Selected",
     "headerFileOperations": "File",
     "headerEditCuration": "Edit",
+    "headerTest": "Test",
     "importAll": "Import All",
     "importAllDesc": "Import all curations that are currently loaded",
     "deleteAll": "Delete All",
@@ -383,7 +384,9 @@
     "sort": "Sort Curations (A-Z)",
     "contextCopyName": "Copy File Name",
     "contextCopyPath": "Copy File Path",
-    "contextCopyAsURL": "Copy File Path as URL"
+    "contextCopyAsURL": "Copy File Path as URL",
+    "contextShowInExplorer": "Show File in Explorer",
+    "contextOpenFolderInExplorer": "Open Folder in Explorer"
   },
   "playlist": {
     "enterDescriptionHere": "Enter a description here...",
