feat: Exports and Curation Templates

--- a/lang/en.json
+++ b/lang/en.json
@@ -334,6 +334,7 @@
     "openImportedFolderDesc": "Open the default Imported curations folder containing your imported curations.",
     "newCuration": "New Curation",
     "newCurationDesc": "Creates a new curation with a unique folder",
+    "newCurationFromTemplate": "New Curation (Template)",
     "loadMeta": "Load Meta",
     "loadMetaDesc": "Load one or more Curation meta files",
     "loadArchive": "Load Archive",
